syntax = "proto3";
package helloworld;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
}

service CalculatorService{
  rpc Sum(SumRequest) returns (SumResponse);
}
message HelloRequest {
   string name = 1;
}

message HelloReply {
    string message = 1;
}


message SumRequest {
  int32 a = 1;
  int32 b = 2;
}

message SumResponse {
  int32 sum = 1;
}

